samples/_failures_safe/1761413651_c922eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea4eb75d.c: In function ‘main’:
./samples/SAFE/__tmp_ea4eb75d.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status == 0) {
      |                 ^
./samples/SAFE/__tmp_ea4eb75d.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea4eb75d.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea4eb75d.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea4eb75d.c:155:17: error: expected declaration or statement at end of input
